--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>网云音乐</title>
     <link rel="stylesheet" href="./public/css/base.css">
     <link rel="stylesheet" href="./public/css/index.css">
+    <link rel="stylesheet" href="./public/css/play.css">
     <style>
         @font-face {
             font-family: 'icomoon';
@@ -23,149 +24,173 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="herder-top">
-            <div class="top-fl">
-                <h1><i class="header-log">  </i>网云音乐</h1>
+    <!-- 开始页start -->
+    <div class="wangyun">
+        <div class="header">
+            <div class="herder-top">
+                <div class="top-fl">
+                    <h1><i class="header-log">  </i>网云音乐</h1>
+                </div>
+                <div class="top-fr">
+                    <span>下载APP <i class="top-icon"></i> </span>
+                </div>
             </div>
-            <div class="top-fr">
-                <span>下载APP <i class="top-icon"></i> </span>
+        </div>
+        <div class="title">
+            <span>推荐音乐</span>
+            <span>热歌榜</span>
+            <span>搜索</span>
+        </div>
+        <div class="song-all">
+            <div>
+                <div class="title-head"></div>
+                <h2>编辑推荐</h2>
+            </div>
+            <div class="song-item">
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/0QIQXbNqa8wRKCv9V3HIyg==/109951165496130558.jpg?imageView=1&type=webp&thumbnail=247x0"
+                        alt="">
+                    <p>今天从《漠河舞厅》听起|私人雷达</p>
+                    <span>127.3亿</span>
+                </div>
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/Z4kCMFQqCJavDMZg9ryqkw==/109951167896223783.jpg?imageView=1&type=webp&thumbnail=247x0"
+                        alt="">
+                    <p>2022全网最火最好听华语热门歌曲（持更）</p>
+                    <span>107.4亿</span>
+                </div>
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/TAkdtSICM4NYvO494mPgQg==/109951164379050124.jpg?imageView=1&type=webp&thumbnail=247x0"
+                        alt="">
+                    <p>一首李荣浩一首杨丞琳</p>
+                    <span>12.3亿</span>
+                </div>
+            </div>
+            <div class="song-item">
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/SBEm15YRlBj9vnYQhAimrA==/109951162990572542.jpg?param=140y140"
+                        alt="">
+                    <p>愿还会有人，做个傻子陪你浪费一生</p>
+                    <span>127.3亿</span>
+                </div>
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/0_1bnD5vWaGKe3s1pjukwg==/109951167901550763.jpg?param=140y140"
+                        alt="">
+                    <p>丁肆's Talk | 上海的梧桐树就是连接我和上海的"Magnetic Field"!!</p>
+                    <span>107.4亿</span>
+                </div>
+                <div class="song-list">
+                    <img src="http://p1.music.126.net/9OwYAZ6xpJRGwLks6kpcXQ==/109951166138800747.jpg?param=140y140"
+                        alt="">
+                    <p>《玫瑰少年》五月天：高彦应该是那朵绽放的玫瑰</p>
+                    <span>12.3亿</span>
+                </div>
+            </div>
+        </div>
+        <div class="singer-list">
+            <div>
+                <div class="title-head"></div>
+                <h2>歌曲列表</h2>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">1</div>
+                    <div class="songbook">
+                        <div class="song-name">天空之城</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 天空之城.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">2</div>
+                    <div class="songbook">
+                        <div class="song-name">关于郑州的记忆</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 关于郑州的记忆（翻自 逼哥）.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">3</div>
+                    <div class="songbook">
+                        <div class="song-name">热河</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 没有人在热河路谈恋爱（翻自 逼哥）.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">4</div>
+                    <div class="songbook">
+                        <div class="song-name">和你在一起</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 和你在一起（翻自 逼哥）.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">5</div>
+                    <div class="songbook">
+                        <div class="song-name">忽然</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
+            </div>
+            <div class="singer-items-all">
+                <div class="singer-items">
+                    <div class="singer-id">6</div>
+                    <div class="songbook">
+                        <div class="song-name">小宇</div>
+                        <div class="singer"> 耿十三 </div>
+                        <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
+                    </div>
+                </div>
+                <div class="icon-play">
+                    <i class="action-play">  </i>
+                </div>
             </div>
         </div>
     </div>
-    <div class="title">
-        <span>推荐音乐</span>
-        <span>热歌榜</span>
-        <span>搜索</span>
-    </div>
-    <div class="song-all">
-        <div>
-            <div class="title-head"></div>
-            <h2>编辑推荐</h2>
+    <!-- 开始页end -->
+    <!-- 播放页start -->
+    <div class="play">
+        <!-- <div class="play-top">
+            <i class="play-top-icon">  </i>
+            <span>正在播放:&nbsp;</span>
+        </div> -->
+        <div class="play-rotate">
+            <img src="./public/img/微信图片_20220809224829.jpg" alt="">
         </div>
-        <div class="song-item">
-            <div class="song-list">
-                <img src="http://p1.music.126.net/0QIQXbNqa8wRKCv9V3HIyg==/109951165496130558.jpg?imageView=1&type=webp&thumbnail=247x0"
-                    alt="">
-                <p>今天从《漠河舞厅》听起|私人雷达</p>
-                <span>127.3亿</span>
-            </div>
-            <div class="song-list">
-                <img src="http://p1.music.126.net/Z4kCMFQqCJavDMZg9ryqkw==/109951167896223783.jpg?imageView=1&type=webp&thumbnail=247x0"
-                    alt="">
-                <p>2022全网最火最好听华语热门歌曲（持更）</p>
-                <span>107.4亿</span>
-            </div>
-            <div class="song-list">
-                <img src="http://p1.music.126.net/TAkdtSICM4NYvO494mPgQg==/109951164379050124.jpg?imageView=1&type=webp&thumbnail=247x0"
-                    alt="">
-                <p>一首李荣浩一首杨丞琳</p>
-                <span>12.3亿</span>
-            </div>
-        </div>
-        <div class="song-item">
-            <div class="song-list">
-                <img src="http://p1.music.126.net/SBEm15YRlBj9vnYQhAimrA==/109951162990572542.jpg?param=140y140" alt="">
-                <p>愿还会有人，做个傻子陪你浪费一生</p>
-                <span>127.3亿</span>
-            </div>
-            <div class="song-list">
-                <img src="http://p1.music.126.net/0_1bnD5vWaGKe3s1pjukwg==/109951167901550763.jpg?param=140y140" alt="">
-                <p>丁肆's Talk | 上海的梧桐树就是连接我和上海的"Magnetic Field"!!</p>
-                <span>107.4亿</span>
-            </div>
-            <div class="song-list">
-                <img src="http://p1.music.126.net/9OwYAZ6xpJRGwLks6kpcXQ==/109951166138800747.jpg?param=140y140" alt="">
-                <p>《玫瑰少年》五月天：高彦应该是那朵绽放的玫瑰</p>
-                <span>12.3亿</span>
-            </div>
+        <div class="play-bottom">
+            <i class="play-icon">  </i>
+            <i class="play-icon">  </i>
+            <i class="play-icon">  </i>
         </div>
     </div>
-    <div class="singer-list">
-        <div>
-            <div class="title-head"></div>
-            <h2>歌曲列表</h2>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">1</div>
-                <div class="songbook">
-                    <div class="song-name">天空之城（翻唱李志）</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 天空之城.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">2</div>
-                <div class="songbook">
-                    <div class="song-name">关于郑州的记忆（翻唱李志）</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 关于郑州的记忆（翻自 逼哥）.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">3</div>
-                <div class="songbook">
-                    <div class="song-name">热河（翻唱李志）</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 没有人在热河路谈恋爱（翻自 逼哥）.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">4</div>
-                <div class="songbook">
-                    <div class="song-name">和你在一起（翻唱李志）</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 和你在一起（翻自 逼哥）.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">5</div>
-                <div class="songbook">
-                    <div class="song-name">忽然</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-        <div class="singer-items-all">
-            <div class="singer-items">
-                <div class="singer-id">6</div>
-                <div class="songbook">
-                    <div class="song-name">小宇</div>
-                    <div class="singer"> 耿十三 </div>
-                    <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
-                </div>
-            </div>
-            <div class="icon-play">
-                <i class="action-play">  </i>
-            </div>
-        </div>
-    </div>
+    <!-- 播放页end -->
     <script src="./public/index.js"></script>
+    <script src="./public/play.js"></script>
 </body>
 
 </html>
