--- a/index.html
+++ b/index.html
@@ -92,82 +92,89 @@
                 <div class="title-head"></div>
                 <h2>歌曲列表</h2>
             </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">1</div>
-                    <div class="songbook">
-                        <div class="song-name">天空之城</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 天空之城.mp3"></audio>
+            <div class="container">
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">1</div>
+                        <div class="songbook">
+                            <div class="song-name">天空之城</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 天空之城.mp3"></audio>
+                        </div>
+                    </div>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
                     </div>
                 </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
-                </div>
-            </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">2</div>
-                    <div class="songbook">
-                        <div class="song-name">关于郑州的记忆</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 关于郑州的记忆（翻自 逼哥）.mp3"></audio>
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">2</div>
+                        <div class="songbook">
+                            <div class="song-name">关于郑州的记忆</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 关于郑州的记忆（翻自 逼哥）.mp3"></audio>
+                        </div>
+                    </div>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
                     </div>
                 </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
-                </div>
-            </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">3</div>
-                    <div class="songbook">
-                        <div class="song-name">热河</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 没有人在热河路谈恋爱（翻自 逼哥）.mp3"></audio>
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">3</div>
+                        <div class="songbook">
+                            <div class="song-name">热河</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 没有人在热河路谈恋爱（翻自 逼哥）.mp3"></audio>
+                        </div>
+                    </div>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
                     </div>
                 </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
-                </div>
-            </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">4</div>
-                    <div class="songbook">
-                        <div class="song-name">和你在一起</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 和你在一起（翻自 逼哥）.mp3"></audio>
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">4</div>
+                        <div class="songbook">
+                            <div class="song-name">和你在一起</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 和你在一起（翻自 逼哥）.mp3"></audio>
+                        </div>
+                    </div>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
                     </div>
                 </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
-                </div>
-            </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">5</div>
-                    <div class="songbook">
-                        <div class="song-name">忽然</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">5</div>
+                        <div class="songbook">
+                            <div class="song-name">忽然</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
+                        </div>
+                    </div>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
                     </div>
                 </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
-                </div>
-            </div>
-            <div class="singer-items-all">
-                <div class="singer-items">
-                    <div class="singer-id">6</div>
-                    <div class="songbook">
-                        <div class="song-name">小宇</div>
-                        <div class="singer"> 耿十三 </div>
-                        <audio class="play-song" src="./public/video/耿十三 - 忽然（翻自 逼哥）.mp3"></audio>
+                <div class="singer-items-all">
+                    <div class="singer-items">
+                        <div class="singer-id">6</div>
+                        <div class="songbook">
+                            <div class="song-name">小宇</div>
+                            <div class="singer"> 耿十三 </div>
+                            <audio class="play-song" src="./public/video/耿十三 - 小宇.mp3"></audio>
+                        </div>
                     </div>
-                </div>
-                <div class="icon-play">
-                    <i class="action-play">  </i>
+                    <div class="icon-play">
+                        <i class="action-play">  </i>
+                    </div>
+                    <div class="play-items style_red">
+                        <i class="play-list play-shang">  </i>
+                        <i class="play-list play-ting">  </i>
+                        <i class="play-list play-xia">  </i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -183,9 +190,9 @@
             <img src="./public/img/微信图片_20220809224829.jpg" alt="">
         </div>
         <div class="play-bottom">
-            <i class="play-icon">  </i>
-            <i class="play-icon">  </i>
-            <i class="play-icon">  </i>
+            <i class="play-icon new-shang">  </i>
+            <i class="play-icon new-ting">  </i>
+            <i class="play-icon new-xia">  </i>
         </div>
     </div>
     <!-- 播放页end -->
